<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:background="@drawable/rounded_button"
            android:onClick="go_to_bluetooth"
            android:text="@string/connect"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LabguageText"
                android:layout_width="172dp"
                android:layout_height="55dp"
                android:layout_marginTop="0dp"
                android:text="@string/language"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:animateLayoutChanges="true"
                android:backgroundTint="#000000"
                android:foregroundTint="#000000"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/FontSizeText"
                android:layout_width="170dp"
                android:layout_height="37dp"
                android:text="@string/font_size"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinnerFontSize"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:backgroundTint="#000000"
                android:foregroundTint="#000000"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="339dp"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sound:"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="OFF"
                android:textOn="ON" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:text="User Name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/contact_us"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Phone number" />

    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="40dp"
        android:max="5"
        android:numStars="5"
        android:rating="4"
        android:stepSize=".5"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="159dp"
        android:text="RATE US"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinLayout"
        app:layout_constraintVertical_bias="0.753" />

</androidx.constraintlayout.widget.ConstraintLayout>