<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="413dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="635dp"
        android:background="@color/seagreen"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="125dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="641dp"
        android:text="@string/Calendar"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view18"
        android:layout_width="wrap_content"
        android:layout_height="101dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/round_corners" />

    <View
        android:id="@+id/view20"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/round_corners" />

    <View
        android:id="@+id/view21"
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/round_corners" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="111dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="291dp"
        android:layout_marginBottom="156dp"
        android:contentDescription="@string/doctor"
        app:srcCompat="@mipmap/ic_doctor_round" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="294dp"
        android:layout_marginBottom="265dp"
        android:contentDescription="@string/pill"
        app:srcCompat="@mipmap/pill" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="117dp"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="569dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="58dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/memo_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="321dp"
        android:text="Medication Alert"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="482dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="188dp"
        android:text="@string/appointment"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="195dp"
        android:layout_marginTop="574dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="106dp"
        android:text="@string/reminder"
        android:textAlignment="center"
        android:textStyle="bold" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="294dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="374dp"
        android:background="@drawable/calands"/>

    <Button
        android:id="@+id/button"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="661dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_corners"
        android:onClick="go_to_popup"
        android:text="New event" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="276dp"
        android:text="Time 2:"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="117dp"
        android:layout_marginTop="417dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="253dp"
        android:text="Time 3:"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="302dp"
        android:text="Time 1:"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="105dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="269dp"
        android:layout_marginTop="401dp"


        android:layout_marginEnd="36dp"
        android:layout_marginBottom="271dp"
        android:text="N/A"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="259dp"
        android:layout_marginTop="419dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="236dp"
        android:text="N/A"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="256dp"

        android:layout_marginTop="380dp"

        android:layout_marginEnd="24dp"
        android:layout_marginBottom="289dp"

        android:text="N/A"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="88dp"
        android:text="No Reminder planned"
        android:textAlignment="center"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="518dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="150dp"
        android:text="No Appointment planned"
        android:textAlignment="center"
        android:textSize="15sp" />

</RelativeLayout>